// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.android.server.sdksandbox.proto;

message ServiceAllowlists {
  map<int32, AllowedServices> allowlist_per_target_sdk = 1;
}

message AllowedServices {
  repeated AllowedService allowed_services = 1;
}

message AllowedService {
  // Name of the action.
  string intentAction = 1;
  // Name of the package.
  string componentPackageName = 2;
  // Name of the component.
  string componentClassName = 3;
}
